# USCodeKit

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFESST.in  README.md  pyproject.toml  setup.cfg  setup.py  setup.sh
.github/workflows/: publish.yaml  tests.yaml
docs/: README.md
docs/naics/: README.md
docs/phone/: README.md
docs/setup/: README.md
docs/zip_code/: README.md
tests/: test_configs.py  test_phone.py  test_service_geo.py  test_setup.py  test_shared_file.py  test_shared_jsonfile.py  test_zipcode.py
uscodekit/: __init__.py  configs.py  naics.py  phone.py  setup.py  zip_code.py
uscodekit/services/: geo.py  naics.py
uscodekit/shared/: file.py  jsonfile.py
