[tool.poetry]
name = "uscodekit"
version = "2024.0.1"
description = "A Python package for US codes validation, extraction, formatting, cleaning, and more."
authors = ["Raihan Kabir <r.kabir01@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rk4bir/USCodeKit"
package-mode = true
packages = [
    { include = "uscodekit", from = "." },
]

[tool.poetry.scripts]


[tool.poetry.dependencies]
python = ">=3.8,<4.0"
cryptography = "^43.0.3"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
coverage-badge = "^1.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
